git commit -m "update"

--- a/compare.ipynb
+++ b/compare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "c9a4f865",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "1218bdb8",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "3137a45c",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "31c984ad",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "Name: episode_reward, Length: 100, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "27e1ef19",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "4f1295fb",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,10 +327,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8cce70ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 成功读取Summary数据\n",
+      "ADP=0 数据形状: (16, 2)\n",
+      "ADP=0.5 数据形状: (16, 2)\n",
+      "ADP=1 数据形状: (16, 2)\n",
+      "数据列: ['Metric', 'Value']\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import pandas as pd\n",
