git commit-m "Adjust ADP weight handling in GurobiOptimizer and add debug info in Environment"

--- a/compare.ipynb
+++ b/compare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c9a4f865",
    "metadata": {},
    "outputs": [],
@@ -16,10 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1218bdb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['episode_time', 'total_orders', 'accepted_orders', 'rejected_orders',\n",
+       "       'active_orders', 'completed_orders', 'avg_battery_level',\n",
+       "       'finished_charge', 'charge_stats', 'total_vehicles', 'ev_count',\n",
+       "       'aev_count', 'ev_rejected', 'aev_rejected', 'total_stations',\n",
+       "       'vehicles_charging', 'total_rebalancing_calls',\n",
+       "       'total_rebalancing_assignments', 'avg_rebalancing_assignments_per_call',\n",
+       "       'rebalancing_assignments_per_step', 'episode_number', 'episode_reward',\n",
+       "       'charging_events_count', 'neural_network_loss',\n",
+       "       'neural_network_loss_std', 'training_steps_in_episode',\n",
+       "       'sample_idle_q_value', 'sample_assign_q_value',\n",
+       "       'sample_charge_q_value'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 读取所有以episode_statistics_adp0_demandintense为前缀的Excel文件\n",
     "import glob\n",
@@ -27,7 +49,7 @@
     "# 查找所有匹配的Excel文件\n",
     "file_pattern = 'results/integrated_tests/episode_statistics_adp0_demandintense_*.xlsx'\n",
     "file_pattern_0_5 = 'results/integrated_tests/episode_statistics_adp0.5_demandintense_*.xlsx'\n",
-    "file_pattern_1 = 'results/integrated_tests/episode_statistics_adp1_demandintense_*.xlsx'\n",
+    "file_pattern_1 = 'results/integrated_tests/episode_statistics_adp1.0_demandintense_*.xlsx'\n",
     "matching_files = glob.glob(file_pattern)\n",
     "matching_files_0_5 = glob.glob(file_pattern_0_5)\n",
     "matching_files_1 = glob.glob(file_pattern_1)\n",
@@ -36,6 +58,150 @@
     "adp_0_5 = pd.read_excel(matching_files_0_5[0], sheet_name='Episode_Statistics')\n",
     "adp_1 = pd.read_excel(matching_files_1[0], sheet_name='Episode_Statistics')\n",
     "adp_0.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9786d75f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 将 'rebalancing_assignments_per_step' 从字符串解析为真实列表（去除可能的 str(...) 包裹）\n",
+    "from ast import literal_eval\n",
+    "import json\n",
+    "\n",
+    "def _parse_listlike(val):\n",
+    "    if isinstance(val, str):\n",
+    "        s = val.strip()\n",
+    "        # 去除形如 str([...]) 的包裹\n",
+    "        if s.startswith('str(') and s.endswith(')'):\n",
+    "            s = s[4:-1].strip()\n",
+    "        # 优先用 literal_eval 解析 Python 风格列表/元组/字典\n",
+    "        try:\n",
+    "            return literal_eval(s)\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "        # 再尝试 JSON 解析（若是 JSON 字符串）\n",
+    "        try:\n",
+    "            return json.loads(s)\n",
+    "        except Exception:\n",
+    "            return val\n",
+    "    return val\n",
+    "\n",
+    "for df in [adp_0, adp_0_5, adp_1]:\n",
+    "    if isinstance(df, pd.DataFrame) and not df.empty and 'rebalancing_assignments_per_step' in df.columns:\n",
+    "        df['rebalancing_assignments_per_step'] = df['rebalancing_assignments_per_step'].apply(_parse_listlike)\n",
+    "\n",
+    "# 快速检查：显示类型与前几个元素（若可下标）\n",
+    "first_val = adp_1['rebalancing_assignments_per_step'].iloc[0] if 'rebalancing_assignments_per_step' in adp_1.columns else None\n",
+    "print('Type after parse:', type(first_val))\n",
+    "try:\n",
+    "    print('Preview:', first_val[:3])\n",
+    "except Exception:\n",
+    "    print('Preview:', first_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "11ca70df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = adp_1['rebalancing_assignments_per_step'][0]\n",
+    "\n",
+    "\n",
+    "p = list(map(int, p.strip('[]').split(',')))\n",
+    "len_p = len(p)\n",
+    "len_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e0f3436",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b99d4853",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa676ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f244849b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8fcdde92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[0, 0, 12, 12, 12, 12, 12, 12, 12, 12, 11, 10, 10, 10, 11, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 11, 10, 10, 10, 10, 11, 12, 12, 12, 12, 11, 11, 11, 12, 12, 12, 12, 12, 12, 12, 11, 11, 11, 12, 12, 11, 11, 11, 11, 12, 12, 12, 11, 11, 11, 11, 11, 11, 9, 9, 10, 10, 11, 11, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 11, 10, 10, 10, 10, 11, 11, 12, 12, 12, 12, 12, 11, 11, 10, 10, 11, 11, 11, 11, 12, 11, 11, 11, 11, 12, 12, 12, 12, 12, 12, 12, 11, 11, 11, 11, 11, 10, 11, 11, 11, 11, 12, 11, 11, 10, 11, 11, 11, 11, 11, 11, 12, 12, 12, 12, 11, 11, 11, 11, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 11, 11, 11, 12, 12, 12, 12, 12]'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adp_1['rebalancing_assignments_per_step'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9508aa99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 12, 12]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = '[0, 12, 12]'\n",
+    "p = list(map(int, p.strip('[]').split(',')))\n",
+    "p"
    ]
   },
   {
@@ -928,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
